--- a/site-blog/src/styles/globals.css
+++ b/site-blog/src/styles/globals.css
@@ -30,10 +30,6 @@
   --radius-lg: 0.5rem;
   --radius-md: calc(0.5rem - 2px);
   --radius-sm: calc(0.5rem - 4px);
-
-  /* Fonts */
-  --font-sans: var(--font-inter), sans-serif;
-  --font-display: var(--font-pt-sans-caption), sans-serif;
 }
 
 @utility container {
@@ -43,74 +39,74 @@
 
 @layer utilities {
   .text-heading-hg {
-    font-size: 40px;
+    font-size: 2.5rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-heading-xl {
-    font-size: 32px;
+    font-size: 2rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-heading-lg {
-    font-size: 28px;
+    font-size: 1.75rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-heading-md {
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-heading-sm {
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-heading-xs {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 120%;
     font-weight: 700;
   }
 
   .text-body-md {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 150%;
     font-weight: 400;
   }
 
   .text-body-sm {
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 150%;
     font-weight: 400;
   }
 
   .text-body-xs {
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 150%;
     font-weight: 400;
   }
 
   .text-body-tag {
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: 100%;
     font-weight: 400;
     text-transform: uppercase;
   }
 
   .text-action-md {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: normal;
     font-weight: 500;
   }
 
   .text-action-sm {
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: normal;
     font-weight: 500;
   }
