feat: refactor typography and remove unused font imports

--- a/site-blog/src/styles/globals.css
+++ b/site-blog/src/styles/globals.css
@@ -30,6 +30,10 @@
   --radius-lg: 0.5rem;
   --radius-md: calc(0.5rem - 2px);
   --radius-sm: calc(0.5rem - 4px);
+
+  /* Font */
+  --font-inter: "Inter", sans-serif;
+  --font-sans: "PT Sans Caption", sans-serif;
 }
 
 @utility container {
